# flir_boson_usb2

./: CMakeLists.txt  License.txt  README.md  package.xml
include/flir_boson_usb2/: BosonCamera.hpp
launch/: flir_boson.launch.py
src/: BosonCamera.cpp
