<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flir_boson_usb2</name>
  <version>2.0.0</version>
  <description>ROS 2 USB camera driver for the FLIR BOSON using OpenCV and V4L2</description>
  <maintainer email="akhilmjohn@gmail.com">Akhil John</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
